# PixelCopy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PixelCopy.spec  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILDING_WINDOWS.md  OCR_PIPELINE.md  PRIVACY.md  PRODUCT_SPEC.md  PROJECT_GUIDE.md  TESTING.md  UI_GUIDELINES.md
packaging/: windows_version_info.txt
scripts/: build_windows.py  download_ocr_models.py  verify_release.py
src/pixelcopy/: __init__.py  __main__.py  app.py  main.py
src/pixelcopy/config/: __init__.py  constants.py  paths.py  settings.py
src/pixelcopy/controllers/: __init__.py  capture_controller.py  export_controller.py  history_controller.py  (+4 more)
tests/: conftest.py
tests/ui/: test_accessibility.py  test_capture_shortcut_and_layout.py  test_export_workflow.py  test_history_workflow.py  test_image_import_workflow.py  test_main_window.py  test_ocr_workflow.py  test_pdf_workflow.py  test_preprocessing_workflow.py  test_responsive_extract_design.py  test_results_editor.py  test_rtl_results.py  test_theme_persistence.py
tests/unit/: test_exporters.py  test_history_repository.py  test_image_import_service.py  test_logging.py  test_ocr_models.py  test_ocr_service.py  test_ocr_worker.py  test_packaging_spec.py  test_paddle_engine.py  test_paths.py  test_pdf_service.py  test_pdf_worker.py  test_postprocessing.py  test_preprocessing_pipeline.py  test_preprocessing_profiles.py  test_reading_order.py  test_resources.py  test_screen_coordinates.py  test_settings.py  test_theme.py
(+58 files in other folders)
