[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "pixelcopy"
version = "0.1.0.dev0"
description = "Copy text from anything you can see."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "PixelCopy contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Win32 (MS Windows)",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["PySide6>=6.8,<7"]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-qt>=4.4,<5",
  "ruff>=0.9,<1",
]
build = ["pyinstaller>=6.11,<7"]

[project.scripts]
pixelcopy = "pixelcopy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelcopy"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["pixelcopy"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true
